--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,11 +49,11 @@
         </li> -->
         <li><a href="/tnpscs">TNPSC</a></li>
         <li><a href="/banks">BANK</a></li>
-        <li><a href="/upscs">UPSC</a></li>
+<!--         <li><a href="/upscs">UPSC</a></li>
         <li><a href="/others">Financial Inst</a></li>
         <li><a href="/tnpscs">SSC</a></li>
         <li><a href="/rrbs">RRB</a></li>
-        <li><a href="/others">OTHERS</a></li>
+        <li><a href="/others">OTHERS</a></li> -->
       </ul>
       <form class="navbar-form navbar-left">
       <div class="input-group">
